--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "portfolio-react",
-  "homepage": "https://imcamiloup.github.io/Portfolio-Website/portfolio-react",
+  "homepage": "https://imcamiloup.github.io/Portfolio-Website",
   "private": true,
   "version": "0.0.0",
   "type": "module",
